@@ -1,45 +1,40 @@
 package edu.zjnu;
 
 
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.TimeUnit;
 
 /**
  * Java 虚拟线程
  */
 public class Main {
-    public static void main(String[] args) {
-        final int NUMBER_OF_THREADS = 10;
-        CountDownLatch latch = new CountDownLatch(NUMBER_OF_THREADS);
-
-        for (int i = 0; i < NUMBER_OF_THREADS; i++) {
-            Thread.ofVirtual().start(() -> {
-                try {
-                    sendHttpRequest("https://www.baidu.com/");
-                } catch (Exception e) {
-                    e.printStackTrace();
-                } finally {
-                    latch.countDown();
-                }
+    public static void main(String[] args) throws InterruptedException {
+        // 传统线程池基准测试
+        long startTime = System.nanoTime();
+        ExecutorService threadPool = Executors.newFixedThreadPool(1000);
+        for (int i = 0; i < 1_000_000; i++) {
+            threadPool.submit(() -> {
+                // 模拟任务
             });
         }
+        threadPool.shutdown();
+        threadPool.awaitTermination(1, TimeUnit.HOURS);
+        long endTime = System.nanoTime();
+        System.out.println("传统线程池执行时间: " + TimeUnit.NANOSECONDS.toMillis(endTime - startTime) + " ms");
 
-        try {
-            latch.await(); // 等待所有线程完成
-        } catch (InterruptedException e) {
-            Thread.currentThread().interrupt();
+
+        // 虚拟线程基准测试（需要 Java 19+）
+        startTime = System.nanoTime();
+        ExecutorService virtualThreadPool = Executors.newVirtualThreadPerTaskExecutor();
+        for (int i = 0; i < 1_000_000; i++) {
+            virtualThreadPool.submit(() -> {
+                // 模拟任务
+            });
         }
-
-        System.out.println("所有请求已完成。");
-    }
-
-    private static void sendHttpRequest(String targetUrl) throws Exception {
-        URL url = new URL(targetUrl);
-        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-        connection.setRequestMethod("GET");
-        int responseCode = connection.getResponseCode();
-        System.out.println("响应代码: " + responseCode);
-        connection.disconnect();
+        virtualThreadPool.shutdown();
+        virtualThreadPool.awaitTermination(1, TimeUnit.HOURS);
+        endTime = System.nanoTime();
+        System.out.println("虚拟线程池执行时间: " + TimeUnit.NANOSECONDS.toMillis(endTime - startTime) + " ms");
     }
 }
